# bio-rd

./: BUILD.bazel  main.go
config/: BUILD.bazel  server.go
protocols/bgp/packet/: BUILD.bazel
protocols/bgp/server/: BUILD.bazel
route/: BUILD.bazel
routingtable/: BUILD.bazel
routingtable/adjRIBIn/: BUILD.bazel
routingtable/adjRIBOut/: BUILD.bazel
routingtable/filter/: BUILD.bazel
routingtable/filter/actions/: BUILD.bazel
routingtable/locRIB/: BUILD.bazel
