load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/bio-routing/bio-rd
gazelle(
    name = "gazelle",
    external = "vendored",
    prefix = "github.com/bio-routing/bio-rd",
)

go_library(
    name = "go_default_library",
    srcs = [
        "main.go",
        "main_ipv4.go",
    ],
    importpath = "github.com/bio-routing/bio-rd",
    visibility = ["//visibility:private"],
    deps = [
        "//vendor/github.com/bio-routing/bio-rd/config:go_default_library",
        "//vendor/github.com/bio-routing/bio-rd/net:go_default_library",
        "//vendor/github.com/bio-routing/bio-rd/protocols/bgp/server:go_default_library",
        "//vendor/github.com/bio-routing/bio-rd/routingtable:go_default_library",
        "//vendor/github.com/bio-routing/bio-rd/routingtable/filter:go_default_library",
        "//vendor/github.com/bio-routing/bio-rd/routingtable/locRIB:go_default_library",
        "//vendor/github.com/sirupsen/logrus:go_default_library",
    ],
)

go_binary(
    name = "bio-rd",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
